src/assets/stylesheets/components/_header.scss
// Components/Header

$nav-height: 3rem;
$nav-height-sticky: 2.3rem;
$nav-padding-top: 3rem;

$header-sm-breakpoint: 25em;
$header-md-breakpoint: 37em;

// Site-Header
// --
// container
.site-header {
  color: rgba(map-get($colors, white), .9);

  @media screen and (max-width: $screen-small) {
    height: auto !important;

    .black-logo {
      display: none;
    }
  }

  &__content {
    background-color: map-get($colors, black);
    transition: $global-transition;
  }

  // Site-Nav
  // inner Container
  .site-nav {
    text-align: center;
  }

  // Site-Header__Logo
  &__logo {
    display: flex;
    align-items: center;
    text-align: center;
    color: inherit;

    img {
      max-width: 2.3rem;
    }

    a {
      color: inherit;
    }

    span {
      color: inherit;
      font-weight: 700;
      font-size: .9rem;
      letter-spacing: .01em;
      padding: 0 1rem;
      display: inline-block;
      transition: $global-transition;
      position: relative;

      @media screen and (min-width: $screen-small) and (max-width: 43em) {
        display: none;
      }
    }

    @media screen and (max-width: 30em) {
      display: block;
      padding: 1rem;
      border-bottom: 1px solid rgba(map-get($colors, white), .2);
    }
  }

  // Nav-Group
  // wrapper for links
  .nav-group {
    display: inline-block;

    // Nav-Group__Link
    &__link {
      color: inherit;
      opacity: .9;
      text-decoration: none;
      padding: 1rem .5rem;
      display: inline-block;
      transition: $global-transition;
      position: relative;

      &:hover {
        opacity: 1;
      }

      &.active {
        // color: map-get($colors, white);
      }
    }
  }
}


//- not mobile
@media screen and (min-width: $screen-small) {

  .site-header {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 10;
    // color: map-get($colors, black);

    a {
      // color: map-get($colors, black);

      &:hover {
        color: inherit;
      }
    }

    &__content {
      background-color: transparent;
      transition: $global-transition;
    }

    .site-nav {
      display: flex;
      justify-content: center;
      // border-bottom: 1px solid rgba(black, .1);
      // padding: $nav-padding-top 0 0;
    }

    &__logo {
      text-decoration: none;

      img {
        max-width: none;
        width: 1.75rem;

        &.black-logo {
          display: none;
        }
      }
    }

    .nav-group {
      display: flex;
      justify-content: center;
      align-items: center;

      &__link {
        font-weight: 700;
        font-size: .9rem;
        letter-spacing: .01em;
        padding: 0 .5rem;
        margin: 0 .25rem;
        line-height: $nav-height;
        position: relative;
        opacity: 1;

        &::before {
          content: '';
          position: absolute;
          bottom: -1px;
          left: 0;
          right: 0;
          height: 0;
          transition: .2s all linear;
        }

        &:hover,
        &:focus,
        .active {
          // color: map-get($colors, dark-red);
        }

        &:hover::before,
        &:focus::before {
          border-bottom: 6px solid;
        }

        &.active::before {
          border-bottom: 1px solid;
        }

      }
    }
  }

}//@media - not mobile

// layout not mobile
@media screen and (min-width: 700px) {
  .site-header .site-nav {
    justify-content: space-between;
  }

  .site-header__logo,
  .nav-group__right {
    width: 20%;
  }

  .nav-group.nav-group__right {
    justify-content: flex-end;
  }
}

// Headroom.js
@media #{$breakpoint-not-small} {
  .headroom {
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;

    &--pinned {

      .site-header__content {
        color: rgba(map-get($colors, white), .9) !important;
        background-color: rgba(map-get($colors, black), 1);
        transition: $global-transition;

        a {
          color: rgba(map-get($colors, white), .9) !important;

          &.active,
          &:focus,
          &:hover {
            color: map-get($colors, red);
          }
          &::before {
            bottom: 0;
          }
        }
      }

      &:hover .site-header__content {
        background-color: rgba(map-get($colors, deep-purple), 1);
      }

      .site-header__logo span,
      .nav-group__link {
        line-height: $nav-height-sticky !important;
      }

      .white-logo {
        display: inline-block !important;
      }
      .black-logo {
        display: none;
      }
    }
    &--unpinned {

      &:hover .site-header__content {
        background-color: rgba(map-get($colors, deep-purple), .1);
        transition: $global-transition;
      }
    }
    &--unfixed {
      position: relative;
      transform: translateY(0);
    }
    &--scrolled {
      transition: transform 200ms ease-in-out;

      .site-nav {
        padding: 0;
        border-bottom: none;

        a::before {
          bottom: 0;
        }
      }
    }
    &--unpinned {
      position: fixed;
      transform: translateY(-100%);
    }
    &--pinned {
      position: fixed;
      transform: translateY(0%);
    }
  }
}

// Nav Theme
.dark-theme .site-header {

  a {
    color: map-get($colors, black);
  }

  .white-logo {
    display: none;
  }
  .black-logo {
    display: inline-block !important;
  }
}

.light-theme .site-header {
  color: rgba(map-get($colors, white), 1);

  a {
    color: rgba(map-get($colors, white), 1);

    &:hover {
      color: inherit;
    }
  }

  .white-logo {
    display: inline-block !important;
  }
  .black-logo {
    display: none;
  }

  .site-nav {
    // border-color: rgba(white, .2);
  }
}

